--- a/package.json
+++ b/package.json
@@ -16,5 +16,7 @@
   "bugs": {
     "url": "https://github.com/dbsrsp/backend-utilities/issues"
   },
-  "homepage": "https://github.com/dbsrsp/backend-utilities#readme"
+  "homepage": "https://github.com/dbsrsp/backend-utilities#readme",
+  "dependencies": {
+  }
 }
