added service for create activity

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dbsrsp/backend-utilities#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "moment": "^2.25.3"
   }
 }
